service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app
spec:
  selector:
    app: myapp
    color: blue   # 👈 BLUE đang live
  ports:
  - port: 80
    targetPort: 80
